Added rxJava dependencies

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply from: '../dependencies.gradle'
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.0"
@@ -20,13 +21,18 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"http://quiet-stone-2094.herokuapp.com\"")
         }
     }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation koinDependencies.values()
+    implementation retrofitDependencies.values()
+    implementation liveDataDependencies.values()
+    implementation rxJavaDependencies.values()
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
