--- a/data/build.gradle
+++ b/data/build.gradle
@@ -17,10 +17,19 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"http://quiet-stone-2094.herokuapp.com\"")
+        }
+
+        debug {
             buildConfigField("String", "BASE_URL", "\"http://quiet-stone-2094.herokuapp.com\"")
         }
     }
