--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,17 @@
 ext {
     //Android
+    minSdkVersion = 21
+    targetSdkVersion = 28
+    versionCode = 1
+    versionName = "1.0"
+    compileSdkVersion = 28
+    buildToolsVersion = "29.0.0"
+
+    //JVMCompatibility
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
+    testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
     //Libraries
     koin_version = "2.0.1"
