--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@
 apply from: 'dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.60'
+    ext{
+        kotlin_version = '1.3.60'
+        coroutinesVersion = '1.2.1'
+    }
     repositories {
         google()
         jcenter()
