Clean up code, remove usecases and datasource

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation retrofitDependencies.values()
     implementation liveDataDependencies.values()
     implementation rxJavaDependencies.values()
+    implementation pagingDependencies.values()
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
