--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(path: ':data')
     implementation project(path: ':domain')
+    implementation project(path: ':presentation')
 }
