--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -4,6 +4,7 @@ apply from: '../dependencies.gradle'
 
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
