--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext{
         kotlin_version = '1.3.60'
         coroutinesVersion = '1.2.1'
+        nav_version = "2.1.0"
     }
     repositories {
         google()
@@ -14,7 +15,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-rc01"
+        //classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha01"
+        //classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
